tests/snapshots/render__timetable-loading-80x24.snap
---
source: tests/render.rs
expression: t.backend()
---
"┌ gensokyo ─────────────┐┌ 1 Reimu · ~/dev/gensokyo ───────────────────────────┐"
"│1 ○ Reimu              ││line 00                                              │"
"│2 ○ Marisa             ││line 01     ~                                        │"
"│3 · Cirno              ││line 02     ~~                                       │"
"│                       ││line 03     ~~~                                      │"
"│                       ││line 04     ~~~~                                     │"
"│                       ││line 05     ~~~~~                                    │"
"│                       ││line 06     ~~~~~~                                   │"
"│                       ││line 07     ~~~~~~~                                  │"
"│                       ││line 08     ~~~~~~~~                                 │"
"│                       ││line 0┌ timetable ───────────────────────────┐       │"
"│                       ││line 1│ loading the rituals…                 │       │"
"│                       ││line 1│ [close esc]                          │       │"
"│                       ││line 1└──────────────────────────────────────┘       │"
"│                       ││line 13     ~~~~~~~~~~~~~                            │"
"│                       ││line 14     ~~~~~~~~~~~~~~                           │"
"│                       ││line 15     ~~~~~~~~~~~~~~~                          │"
"│                       ││line 16     ~~~~~~~~~~~~~~~~                         │"
"│[summon n] [cast c]    ││line 17     ~~~~~~~~~~~~~~~~~                        │"
"│[banish b] [recall r]  ││line 18     ~~~~~~~~~~~~~~~~~~                       │"
"│[timetable t] [quit q] ││line 19     ~~~~~~~~~~~~~~~~~~~                      │"
"│[?]                    ││line 20                                              │"
"│[mouse: shrine m]      ││line 21     ~                                        │"
"└───────────────────────┘└─────────────────────────────────────────────────────┘"
