tests/snapshots/render__timetable-loading.snap
---
source: tests/render.rs
expression: modal_box(&m).backend()
---
"┌ timetable ───────────────────────────┐"
"│ loading the rituals…                 │"
"│ [close esc]                          │"
"└──────────────────────────────────────┘"
