tests/snapshots/render__timetable-remove-80x24.snap
---
source: tests/render.rs
expression: t.backend()
---
"┌ gensokyo ─────────────┐┌ 1 Reimu · ~/dev/gensokyo ───────────────────────────┐"
"│1 ○ Reimu              ││line 00                                              │"
"│2 ○ Marisa             ││line 01     ~                                        │"
"│3 · Cirno              ││line 02     ~~                                       │"
"│                       ││line 03     ~~~                                      │"
"│                       ││line 04     ~~~~                                     │"
"│                       ││line 05     ~~~~~                                    │"
"│                       ││line 06     ~~~~~~                                   │"
"│                       ││line 07     ~~~~~~~                                  │"
"│                       ││l┌ slack-morning ─────────────────────────────────┐  │"
"│                       ││l│ Remove slack-morning?                          │  │"
"│                       ││l│ Its file, its notes and its journal go, and do │  │"
"│                       ││l│ not come back.                                 │  │"
"│                       ││l│ [yes y] [no n]                                 │  │"
"│                       ││l└────────────────────────────────────────────────┘  │"
"│                       ││line 14     ~~~~~~~~~~~~~~                           │"
"│                       ││line 15     ~~~~~~~~~~~~~~~                          │"
"│⏲ evening-notes   23:00││line 16     ~~~~~~~~~~~~~~~~                         │"
"│[summon n] [cast c]    ││line 17     ~~~~~~~~~~~~~~~~~                        │"
"│[banish b] [recall r]  ││line 18     ~~~~~~~~~~~~~~~~~~                       │"
"│[timetable t] [quit q] ││line 19     ~~~~~~~~~~~~~~~~~~~                      │"
"│[?]                    ││line 20                                              │"
"│[mouse: shrine m]      ││line 21     ~                                        │"
"└───────────────────────┘└─────────────────────────────────────────────────────┘"
